# pinwebcam

./: README.md  package-lock.json  package.json
.github/workflows/: release_branch.yml
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
