[package]
name = "Overlay-CamWindow"
version = "0.1.0"
description = "Keep your webcam feed always on top with Overlay-CamWindow! This lightweight app, using under 5MB of RAM, is perfect for streaming and screen sharing. Effortlessly share your view during calls and enjoy seamless multitasking."
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "window-unminimize", "window-minimize", "window-show", "window-close", "window-unmaximize", "window-start-dragging", "window-maximize", "window-hide", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
always-on-top-windows = "0.1.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
