[package]
name = "pinwebcam"
version = "0.1.0"
description = "Keep your webcam feed always on top with Overlay-CamWindow! This lightweight app, using under 5MB of RAM, is perfect for streaming and screen sharing. Effortlessly share your view during calls and enjoy seamless multitasking."
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = 3 # Prioritizes small binary size use `s`. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "window-unminimize", "window-minimize", "window-show", "window-close", "window-unmaximize", "window-start-dragging", "window-maximize", "window-hide", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
always-on-top-windows = "0.1.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
